--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           node-version: "20.x"
 
+      - name: 📏 Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
       - name: ⚙️ Install dependencies and build
         run: |
           pnpm install
