--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -52,26 +52,6 @@ jobs:
       - name: 📂 Copy Public folder
         run: cp -R ./public ./site-deploy/public
 
-      - name: 🔧 Normalize package.json in artifact
-        run: |
-          node -e "
-          const fs=require('fs');
-          const p=require('./site-deploy/package.json');
-          // Remove dev-only and build-time scripts that can trigger Oryx builds
-          if(p.scripts){
-            delete p.scripts.postinstall;
-            delete p.scripts.prepare;
-            p.scripts.start='node server.js';
-            p.scripts.build='echo \"Using prebuilt standalone build\"';
-          } else {
-            p.scripts={start:'node server.js',build:'echo \"Using prebuilt standalone build\"'};
-          }
-          // Ensure Oryx does not pick pnpm
-          delete p.packageManager;
-          // Keep the file tidy
-          fs.writeFileSync('./site-deploy/package.json', JSON.stringify(p,null,2));
-          "
-
       - name: 📦 Package Next application
         run: |
           cd ./site-deploy
@@ -119,12 +99,10 @@ jobs:
           inlineScript: |
             az cloud set --name AzureChinaCloud
             rg=$(az webapp list --query "[?name=='${{ secrets.AZURE_APP_SERVICE_NAME }}'].resourceGroup" --output tsv)
-            echo "Disabling Oryx build and Kudu build on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}"
-            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings ENABLE_ORYX_BUILD=false SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
-            echo "Setting startup command to 'node /home/site/wwwroot/server.js'"
-            az webapp config set --startup-file="node /home/site/wwwroot/server.js" -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg -o none
-            echo "Enabling filesystem application logs (optional)"
-            az webapp log config -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --application-logging filesystem --level information -o none || true
+            echo Setting SCM_DO_BUILD_DURING_DEPLOYMENT=false on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
+            echo Setting --startup-file=\"node server.js\" on app service ${{ secrets.AZURE_APP_SERVICE_NAME }}
+            az webapp config set --startup-file="node server.js" -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg -o none
             sleep 10
 
       - name: 🚀 Deploy to Azure Web App
