--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -46,16 +46,45 @@ jobs:
           cp -R ./public ./.next/standalone/public
           cp -R ./.next/static ./.next/standalone/.next/static
 
-      - name: Create deployment archive
+      - name: List contents of .next/standalone
         run: |
-          cd ./.next/standalone
-          tar -czf ../../deploy.tar.gz .
+          echo "Contents of .next/standalone:"
+          ls -al ./.next/standalone
+          echo "Contents of .next/standalone/.next:"
+          ls -al ./.next/standalone/.next || echo ".next not found"
+          echo "Contents of .next/standalone/public:"
+          ls -al ./.next/standalone/public || echo "public not found"
+      - name: List contents of .next/standalone
+        run: |
+          echo "Contents of .next/standalone:"
+          ls -al ./.next/standalone
+          echo "Contents of .next/standalone/.next:"
+          ls -al ./.next/standalone/.next
+          echo "Contents of .next/standalone/public:"
+          ls -al ./.next/standalone/public
+
+      # - name: 📂 Copy standalone into the root
+      #   run: |
+      #     mkdir -p ./site-deploy/.next
+      #     cp -R ./.next/standalone/* ./site-deploy
+
+      # - name: 📂 Copy static into the .next folder
+      #   run: cp -R ./.next/static ./site-deploy/.next/static
+
+      # - name: 📂 Copy Public folder
+      #   run: cp -R ./public ./site-deploy/public
+
+      # - name: 📦 Package Next application
+      #   run: |
+      #     cd ./site-deploy
+      #     zip Nextjs-site.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: app
-          path: ./deploy.tar.gz
+          path: ./.next/standalone
+          include-hidden-files: true
 
       - name: 🔍 Diagnostics
         run: |
@@ -89,12 +118,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app
-          path: ./
-
-      - name: 📦 Extract deployment archive
-        run: |
-          mkdir -p ./app
-          tar -xzf ./deploy.tar.gz -C ./app
+          path: ./app
 
       - name: 🗝️ Azure Login
         uses: azure/login@v2.2.0
