--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           node-version: "20.x"
 
-      - name: 📏 Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9
+      # - name: 📏 Install pnpm
+      #   uses: pnpm/action-setup@v2
+      #   with:
+      #     version: 9
 
       - name: 🔑 Create .env file
         run: |
@@ -38,30 +38,13 @@ jobs:
 
       - name: ⚙️ Install dependencies and build
         run: |
-          pnpm install
-          pnpm run build
+          npm install
+          npm run build
 
       - name: Copy static files
         run: |
           cp -R ./public ./.next/standalone/public
           cp -R ./.next/static ./.next/standalone/.next/static
-
-      - name: List contents of .next/standalone
-        run: |
-          echo "Contents of .next/standalone:"
-          ls -al ./.next/standalone
-          echo "Contents of .next/standalone/.next:"
-          ls -al ./.next/standalone/.next || echo ".next not found"
-          echo "Contents of .next/standalone/public:"
-          ls -al ./.next/standalone/public || echo "public not found"
-      - name: List contents of .next/standalone
-        run: |
-          echo "Contents of .next/standalone:"
-          ls -al ./.next/standalone
-          echo "Contents of .next/standalone/.next:"
-          ls -al ./.next/standalone/.next
-          echo "Contents of .next/standalone/public:"
-          ls -al ./.next/standalone/public
 
       # - name: 📂 Copy standalone into the root
       #   run: |
