--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: ⚙️ Install dependencies and build
         run: |
-          npm install
-          npm run build
+          pnpm install
+          pnpm run build
 
       - name: Copy static files
         run: |
