--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           node-version: "20.x"
 
-      # - name: 📏 Install pnpm
-      #   uses: pnpm/action-setup@v2
-      #   with:
-      #     version: 9
+      - name: 📏 Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
 
       - name: 🔑 Create .env file
         run: |
