--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -41,13 +41,10 @@ jobs:
           pnpm install
           pnpm run build
 
-      - name: Copy static files and configuration
+      - name: Copy static files
         run: |
           cp -R ./public ./.next/standalone/public
           cp -R ./.next/static ./.next/standalone/.next/static
-          cp package.json ./.next/standalone/package.json
-          cp web.config ./.next/standalone/web.config
-          cp .deployment ./.next/standalone/.deployment
 
       - name: 📦 Create deployment archive with symlinks preserved
         run: |
@@ -59,13 +56,7 @@ jobs:
         with:
           name: app
           path: ./deploy.tar.gz
-
-      - name: 🔍 Diagnostics
-        run: |
-          ls -al
-          ls -la ./.next
-          ls -la ./.next/standalone 2>/dev/null || echo "No standalone directory found"
-          find ./.next -name "server.js" 2>/dev/null || echo "No server.js found"
+          include-hidden-files: true
 
   deploy:
     runs-on: ubuntu-latest
@@ -90,10 +81,6 @@ jobs:
           mkdir -p app
           tar -xzf deploy.tar.gz -C app
           rm deploy.tar.gz
-          echo "=== Deployment contents ==="
-          ls -la app/
-          echo "=== Checking for server.js ==="
-          find app/ -name "server.js" -o -name "package.json" | head -10
 
       - name: 🗝️ Azure Login
         uses: azure/login@v2.2.0
@@ -107,4 +94,3 @@ jobs:
         with:
           app-name: ${{ secrets.AZURE_APP_SERVICE_NAME }}
           package: ./app
-          startup-command: "node server.js"
