test post install prod

--- a/.github/workflows/wapp-tinacms.yml
+++ b/.github/workflows/wapp-tinacms.yml
@@ -84,3 +84,14 @@ jobs:
         with:
           app-name: ${{ secrets.AZURE_APP_SERVICE_NAME }}
           package: ./deploy.zip
+
+      - name: "📦 Install production dependencies with pnpm"
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.57.0
+          inlineScript: |
+            az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            az webapp ssh \
+              --resource-group ${{ secrets.AZURE_RG }} \
+              --name ${{ secrets.AZURE_APP_SERVICE_NAME }} \
+              --command "cd site/wwwroot && pnpm install --prod"
